--- a/SolutionWarriors/SolutionWarriors.UI/Views/Account/Index.cshtml
+++ b/SolutionWarriors/SolutionWarriors.UI/Views/Account/Index.cshtml
@@ -15,20 +15,20 @@
                 <img src="http://i.stack.imgur.com/SBv4T.gif" alt="this slowpoke moves" width="250" />
             </div>
 
-            <h1 class="text-center font_title mb-2">Warriors of Intelligence</h1>
+            <h1 class="text-center font_title mb-2">Guerreiros da Inteligência</h1>
 
             <div class="form-row text-center">
 
                 <div class="col-12 mb-2">
-                    <input asp-for="UserEmail" type="email" class="form-control form-control" placeholder="name@example.com" required>
+                    <input asp-for="UserEmail" type="email" class="form-control form-control" placeholder="E-mail@exemplo.com" required>
                 </div>
 
                 <div class="col-12 mb-2">
-                    <input asp-for="UserPassword" type="password" class="form-control form-control" id="floatingInput" placeholder="password" required>
+                    <input asp-for="UserPassword" type="password" class="form-control form-control" id="floatingInput" placeholder="Insira sua senha" required>
                 </div>
 
                 <div class="col-12 mb-2">
-                    <button class="btn btn-dark btn-block" type="submit">Sign in</button>
+                    <button class="btn btn-dark btn-block" type="submit">Login</button>
                 </div>
 
             </div>
@@ -43,7 +43,7 @@
         </form>
 
         <div class="text-center">
-            <p class="">Return to <a asp-controller="Home" asp-action="Index">home page</a>.</p>
+            <p class="">Voltar para a <a asp-controller="Home" asp-action="Index">página inicial</a>.</p>
         </div>
 
     </div>
