--- a/SolutionWarriors/SolutionWarriors.UI/Views/Home/Index.cshtml
+++ b/SolutionWarriors/SolutionWarriors.UI/Views/Home/Index.cshtml
@@ -10,11 +10,11 @@
 
         <div class="m-4 m-lg-5">
 
-            <h1 class="font_title_home">Warriors of</h1>
+            <h1 class="font_title_home">Guerreiros da</h1>
 
-            <h2 class="font_title_home">Intelligence</h2>
+            <h2 class="font_title_home">Inteligência</h2>
 
-            <a class="btn btn-dark btn-lg w-50" asp-controller="Home" asp-action="Index">Game</a>
+            <a class="btn btn-dark btn-lg w-50" asp-controller="Home" asp-action="Index">Jogar</a>
 
         </div>
 
