--- a/SolutionWarriors/SolutionWarriors.UI/Views/Manager/Index.cshtml
+++ b/SolutionWarriors/SolutionWarriors.UI/Views/Manager/Index.cshtml
@@ -6,9 +6,9 @@
 <div class="text-center mt-5">
     <img src="http://i.stack.imgur.com/SBv4T.gif" alt="this slowpoke moves" width="250" />
 
-    <h2 class="display-4">Welcome!</h2>
+    <h2 class="display-4">@User.Identity.Name - Área exclusiva.</h2>
 
     <h3>We are in development...</h3>
 
-    <p>to return to the home page <a asp-controller="Home" asp-action="Index">click here</a>.</p>
+    <p>Return to the home page <a asp-controller="Home" asp-action="Index">click here</a>.</p>
 </div>
