--- a/SolutionWarriors/SolutionWarriors.UI/Views/Account/Index.cshtml
+++ b/SolutionWarriors/SolutionWarriors.UI/Views/Account/Index.cshtml
@@ -42,7 +42,7 @@
 
         </form>
 
-        <div class="text-center">
+        <div class="text-center mt-2">
             <p class="">Voltar para a <a asp-controller="Home" asp-action="Index">página inicial</a>.</p>
         </div>
 
