--- a/SolutionWarriors/SolutionWarriors.UI/Views/Home/Index.cshtml
+++ b/SolutionWarriors/SolutionWarriors.UI/Views/Home/Index.cshtml
@@ -8,16 +8,51 @@
 
     <article class="rounded shadow text-center mt-5 p-4 p-lg-5 bg_img">
 
-        <div class="m-4 m-lg-5">
+        <div class="m-3 m-lg-5">
 
             <h1 class="font_title_home">Guerreiros da</h1>
 
             <h2 class="font_title_home">Inteligência</h2>
 
-            <a class="btn btn-dark btn-lg w-50" asp-controller="Home" asp-action="Index">Jogar</a>
+            <a class="btn btn-dark btn-lg w-50" asp-controller="" asp-action="">Jogar</a>
 
         </div>
 
     </article>
 
+    <article class="row justify-content-center mt-4">
+
+        <div class="col-sm-12 justify-content-center">
+            <h3 class="h1 text-center font_default_black">5º Melhores jogadores</h3>
+        </div>
+
+        <div class="col-sm-8 text-center">
+
+            <div class="table-responsive table-responsive shadow-sm rounded mb-4">
+                <table class="table table-hover m-0">
+
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Jogador</th>
+                            <th scope="col">No. Vitorias</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                    </tbody>
+
+                </table>
+            </div>
+        </div>
+
+    </article>
+
+
+
 </section>
+
+
+@section scripts{
+
+    <script src="~/js/home.js" asp-append-version="true"></script>
+}
